--- a/css/pages.css
+++ b/css/pages.css
@@ -1,3 +1,11 @@
+header {
+    display: flex;
+    margin-block-end: 0;
+    background-color: #B8D8EA;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
 content-body {
     margin: auto;
     width: fit-content;
@@ -6,4 +14,35 @@ content-body {
     flex-direction: column;
     align-items: center;
     font-size: 1.5rem;
+}
+
+footer nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    
+    /* justify-content: center; */
+
+    /* display: flex; */
+    /* justify-content: end; */
+}
+
+.main_button {
+    width: 100px;   
+    /* border: 0; */
+    line-height: 2.5;
+    /* padding: 0 20px; */
+    font-size: 1rem;
+    background-color: gray;
+    border-radius: 10px;
+    /* text-shadow: 1px 1px 1px #fff; */
+}
+
+.main_button:hover {
+    background-color: rgb(102, 99, 99);
+}
+
+.main_button[selected="true"] {
+    background-color: rgb(102, 99, 99);
 }
