--- a/css/pages.css
+++ b/css/pages.css
@@ -3,6 +3,7 @@ header {
     margin-block-end: 0;
     background-color: #B8D8EA;
     justify-content: space-evenly;
+    align-items: center;
     padding: 10px;
 }
 
