--- a/css/pages.css
+++ b/css/pages.css
@@ -1,10 +1,18 @@
 header {
     display: flex;
+    width:auto;
     margin-block-end: 0;
     background-color: #B8D8EA;
     justify-content: space-evenly;
     align-items: center;
     padding: 10px;
+}
+
+@media (max-width: 700px) {
+    header {
+        font-size: 0.5rem;
+        /* min-width: 100vh; */
+    }
 }
 
 content-body {
@@ -15,6 +23,12 @@ content-body {
     flex-direction: column;
     align-items: center;
     font-size: 1.5rem;
+}
+
+@media (max-width: 700px) {
+    content-body {
+        font-size: 1rem;
+    }
 }
 
 footer nav {
@@ -37,6 +51,7 @@ footer nav {
     font-size: 1rem;
     background-color: gray;
     border-radius: 10px;
+    text-align: center;
     /* text-shadow: 1px 1px 1px #fff; */
 }
 
@@ -46,4 +61,11 @@ footer nav {
 
 .main_button[selected="true"] {
     background-color: rgb(102, 99, 99);
+}
+
+@media (max-width: 700px) {
+    .main_button {
+        width: 50px;
+        font-size: 0.5rem;
+    }
 }
