--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,29 @@ content-body {
     font-size: 1.5rem;
 }
 
+content-body:has(+ h2) {
+    text-align: center;
+    font-size: 1.7rem;
+}
+
+@keyframes slow-roll {
+    from {
+      translate: 150vw 0 ;
+      scale: 300% 1;
+    }
+  
+    to {
+      translate: 0 0;
+      scale: 100% 1;
+    }   
+  }
+
+content-body > h1 {
+    text-align: center;
+    animation-duration: 1.5s;
+    animation-name: slow-roll;
+}
+
 footer nav {
     display: flex;
     flex-direction: row;
